# parallel_matrix_multiplication

./: .gitignore  CMakeLists.txt  README.md
experiments/: Makefile  experiment_01.py  experiment_02.py  results.json
lib/: matrix_generator.hpp  matrix_multiplier.hpp
matrix/: info.txt
result/: info.txt
src/: auxiliar.cpp  main.cpp  matrix_generator.cpp  matrix_multiplier.cpp  process.cpp  sequential.cpp  thread.cpp
